--- a/pom.xml
+++ b/pom.xml
@@ -14,5 +14,12 @@
             <artifactId>google-api-client</artifactId>
             <version>1.4.0-alpha</version>
         </dependency>
+
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+        </dependency>
+
     </dependencies>
 </project>
